# PINN_Android

./: .gitmodules  CMakeCache.txt  CMakeLists.txt  README.md
modules/: CMakeLists.txt
src/: CMakeLists.txt
